--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 server.error.include-exception=false
+
+jwt.secret=${JWT_SECRET}
+jwt.expiration=86400000
