--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=dev
 
-spring.application.name=todosimple
+spring.application.name=aligntodo
 
 # Database config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
